--- a/client/src/postCard.css
+++ b/client/src/postCard.css
@@ -6,12 +6,12 @@
 	padding: 20px;
 	border: 1px solid lightgrey;
 	border-radius: 5px;
-	display:inline-block;
+	display: inline-block;
 	min-height: 300px;
 }
 
 .postContainer {
-	margin: 50px;
+
 }
 
 .card:hover {
@@ -52,6 +52,10 @@ div#postIcons {
 
 .fa-twitter-square {
 	color: #1DA1F2;
+}
+
+.fa-retweet {
+	color: #0275D8;
 }
 
 .fa-check {
