--- a/client/src/userPage.css
+++ b/client/src/userPage.css
@@ -8,9 +8,10 @@
 
 #profileImage {
 	width: 200px;
-	height: 300px;
+	height: 200px;
 	margin-left: auto;
 	margin-right: auto;
+	border-radius: 50%;
 }
 
 .menuTabs {
