--- a/client/src/signup.css
+++ b/client/src/signup.css
@@ -1,9 +1,14 @@
-.registerForm {
+.registerForm, .loginForm {
 	width: 300px;
 	margin-right: auto;
 	margin-left: auto;
+	margin-top: 30px;
 }
 
+.loginContainer {
+	text-align: center;
+	margin-top: 200px;
+}
 .hide {
 	display: none;
 }
