--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,3 +26,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.divInline {
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+}
