message when no posts

--- a/client/src/css/postCard.css
+++ b/client/src/css/postCard.css
@@ -10,8 +10,10 @@
 	min-height: 300px;
 }
 
-.postContainer {
-
+.noPosts {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
 }
 
 .card:hover {
